Primera verrsió completa del web.

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -4,9 +4,12 @@
             <div class="purple-bg">
                 <div class="container">
                     <div class="col-lg-8 col-lg-offset-2">
-                        <h2>Descarrega't les nostres ofertes!</h2>
-                        <p>Hem preparat tres paquets especialment pensants per a les necessitats de comunicació web dels artistes. Escull aquell que s'adapti millor a les teves necessitats.</p>
-                        <a href="/docs/serveis-web-comunicacio-artistes-jordi-pages.pdf" class="btn btn-default btn-lg"><i class="fa fa-download"></i> Descàrrega</a>
+                        <h2>Albert Forns entrevista Jordi Pagès. Orientals, XIPTV. Juny, 2014</h2>
+                        <iframe id="iframe_chapter" src="http://votv.xiptv.cat/embed/133180?width=698&amp;iframe_width=720&amp;share=&amp;height=393&amp;iframe_height=439" name="iframe_chapter" width="720" height="439" frameborder="0" scrolling="no"></iframe>
+                        <hr/>
+                        <h2>tv3 comarques TN 20/08/2012</h2>
+                        <p>Comença al minut 19:21</p>
+                        <iframe src="http://www.ccma.cat/video/embed/4215790" allowfullscreen scrolling="no" frameborder="0" width="720px" height="405px"></iframe>
                     </div>
                 </div>
             </div>
