--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -21,16 +21,16 @@
                         <a class="page-scroll" href="/#about">Sobre</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/#filosofia">Filosofia</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/#serveis">Serveis</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/#download">Download</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="/#portfoli">Obres</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#filosofia">Trajectòria</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#download">Media</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/#serveis">Opinions</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/#contact">Contacte</a>
