--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,11 +1,7 @@
 <!-- Aside -->
 <aside>
   <div class="container">
-  {% assign sale_date = site.time | date_to_xmlschema %}
-    <p><small>Les imatges de fons són adaptacions de les següents obres: 
-  {% for angel in site.data.angels %}
-    <strong>{{ angel.title }}</strong> | {% if angel.downloadable == true %} digital art{% else if %} dimensions: {{ angel.dimensions.length }}x{{ angel.dimensions.height }} {{ angel.dimensions.unit }}{% endif %}. Si ho desitges pots comprar-la: <a href="{{ angel.permalink }}">¡{% if sale_date > site.sale-end %}{{ angel.regular_price }}{% else if %}{{ angel.price_html }}{% endif %}! <i class="fa fa-credit-card"></i></a>. 
-  {% endfor %}
+    <p><small>Les imatges de fons són adaptacions d'una part de les <a href="/obres/">obres</a> de Jordi Pagès, la majoria de les quals es poden comprar a la plataforma <a href="http://www.artinpocket.cat/etiqueta-producto/jordi-pages/">Artinpocket</a>.
     </small></p>
   </div>
 </aside>
