--- a/_includes/filosofia.html
+++ b/_includes/filosofia.html
@@ -1,7 +1,7 @@
     <!-- Filosofia Section -->
     <section id="filosofia" class="content-section no-padding">
         <div class="filosofia-section">
-            <div class="purple-bg">
+            <div class="yellow-bg">
                 <div class="container text-center">
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
