Nova versió beta. Afegit el component pjax, refet l'appcache, el·liminat els components google-map i activats els vídeos.

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -3,14 +3,18 @@
         <div class="download-section">
             <div class="purple-bg">
                 <div class="container">
-                    <!-- <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-lg-8 col-lg-offset-2">
                         <h2>Albert Forns entrevista Jordi Pagès. Orientals, XIPTV. Juny, 2014</h2>
-                        <iframe id="iframe_chapter" src="http://votv.xiptv.cat/embed/133180?width=778&amp;iframe_width=800&amp;share=&amp;height=438&amp;iframe_height=484" name="iframe_chapter" scrolling="no" frameborder="0" height="484" width="800"></iframe>
+                        <div class="embed-container embed-container_16-9">
+                            <iframe src="//player.vimeo.com/video/117998243" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        </div>
                         <hr/>
                         <h2>tv3 comarques TN 20/08/2012</h2>
                         <p>Comença al minut 19:21</p>
-                        <iframe src="http://www.ccma.cat/video/embed/4215790" allowfullscreen scrolling="no" frameborder="0" width="720px" height="405px"></iframe>
-                    </div> -->
+                        <div class="embed-container embed-container_16-9">
+                            <iframe src="http://www.ccma.cat/video/embed/4215790" allowfullscreen scrolling="no" frameborder="0" width="720px" height="405px"></iframe>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
