activat nou  vídeo.

--- a/_includes/download.html
+++ b/_includes/download.html
@@ -9,10 +9,9 @@
                             <iframe src="//player.vimeo.com/video/117998243" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                         <hr/>
-                        <h2>tv3 comarques TN 20/08/2012</h2>
-                        <p>Comença al minut 19:21</p>
+                        <h2>Fragment de l'aparició de Jordi Pagès al TN comarques 20/08/2012</h2>
                         <div class="embed-container embed-container_16-9">
-                            <iframe src="http://www.ccma.cat/video/embed/4215790" allowfullscreen scrolling="no" frameborder="0" width="720px" height="405px"></iframe>
+                            <iframe src="//player.vimeo.com/video/117999878" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
