Arreglat que diuen de mi.

--- a/_includes/serveis.html
+++ b/_includes/serveis.html
@@ -3,7 +3,7 @@
         <div class="serveis-section">            
             <div class="yellow-bg">
                 <div class="container">
-                    <h2 class="text-center">Què dieun de mi?</h2>
+                    <h2 class="text-center">Què diuen de mi?</h2>
                     {% for post in site.categories['opinions'] %}
                         {{ post.content }}
                     {% endfor %}
