--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,9 +43,9 @@ layout: default-post
 </div>
 
 <div class="related">
-  <h2>També et post interessar</h2>
+  <h2>També et pot interessar</h2>
   <ul class="related-posts">
-    {% for post in site.related_posts limit:3 %}
+    {% for post in site.related_posts limit:5 %}
       <li>
         <h3>
           <a href="{{ post.url }}">
