nova actualització per provar el worker.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Sobre <span class="light">Jordi</span>Pagès</h2>
-                    <p>Jordi Pagès (1951) és un artista de Granollers molt vinculat a Cadaqués, on també hi té estudi, amb una llarga trajectòria artística. Lector apassionat, en especial de la poesia, l’utilitza com a diàleg creatiu amb conseqüències quasi sempre imprevisibles. Optant per tenir més llibertat, ha presentat la seva obra en galeries, llibreries, espais singulars,etc.... Les seves obres són una síntesi d’esferes imaginables, començant per la poesia o la pintura, passant per la música o el cinema, i finalitzant amb un calidoscopi artístic. És per aquest fet que Jordi Pagès utilitza sobretot el collage, per donar cabuda a tot el seu eclèctic imaginari creatiu ;-)</p>
+                    <p>Jordi Pagès (1951) és un artista de Granollers molt vinculat a Cadaqués, on també hi té estudi, amb una llarga trajectòria artística. Lector apassionat, en especial de la poesia, l’utilitza com a diàleg creatiu amb conseqüències quasi sempre imprevisibles. Optant per tenir més llibertat, ha presentat la seva obra en galeries, llibreries, espais singulars,etc.... Les seves obres són una síntesi d’esferes imaginables, començant per la poesia o la pintura, passant per la música o el cinema, i finalitzant amb un calidoscopi artístic. És per aquest fet que Jordi Pagès utilitza sobretot el collage, per donar cabuda a tot el seu eclèctic imaginari creatiu :P</p>
                 </div>
             </div>
             <ul>
