Afegida ombra als figures tipus material design.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -492,6 +492,7 @@ figure{
   padding: 1em;
   margin: .25rem -1rem;
   color: #000000;
+  box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24);
 }
 figure img {
   display: inline;
